message DeviceConfigurationMessage {
	message Name {
		repeated bytes components = 8;
	}
    message DeviceConfiguration {
        required Name networkPrefix = 226;
        required Name controllerName = 227;
        required Name deviceSuffix = 228;
    }
	required DeviceConfiguration configuration = 229;
}
